2000-10-26  Jeffrey Stedfast  <fejj@helixcode.com>

	* test-mime.c: Also updated.

	* gmime-parser.c (construct_headers): Updated to reflect name
	changes.

	* gmime-message.c: Updated to reflect name changes.

	* gmime-message.h: Changed the name of the recipient type
	#defines.

2000-10-24  Jeffrey Stedfast <fejj@helixcode.com>

	* Makefile.am (SUBDIRS): Added "."

	* configure.in: Create libgmime.spec

2000-10-24  Charles Kerr <charles@superpimp.org>

	* gmime-utils.c: added #include <stdlib.h> to pick up atoi.

	* internet-address.c (internet_address_new): removed unused
	variable `decoded'

2000-10-24  Jeffrey Stedfast  <fejj@helixcode.com>

	Thanks to Charles Kerr of Pan fame for the following fixes.

	* gmime-utils.c (encode_8bit_word): Oops, encode 'word' and not 'ptr'.

	* gmime-part.c (g_mime_part_destroy): Free the content-id.

2000-10-21  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime.h.in: Wrap definitions in #ifndef __GMIME_H__

2000-10-18  Jeffrey Stedfast  <fejj@helixcode.com>

	* TODO: Updated.

	* test-*.c: Updated to reflect GMime API changes.

	* gmime-part.c: #include "gmime-utils.h"

	* gmime-parser.c (g_mime_parser_construct_message): Now takes a
	boolean argument 'save_extra_headers' which tells the parser
	whether it should add unknown headers to the arbitrary header
	array or ignore them.
	(construct_headers): Save the extra headers if desired.

	* gmime-message.c (g_mime_message_add_arbitrary_header): Use the
	new GMimeHeader structure.
	(g_mime_message_new): Always initialize the arbitrary header array.
	(g_mime_message_destroy): The arbitrary header array will never
	be NULL (as it is now pre-initialized) so don't bother
	checking.
	(create_header): rfc2047 encode the arbitrary header values.

2000-10-17  Jeffrey Stedfast  <fejj@helixcode.com>

	* rfc/rfc*.txt: MIME specification RFCs

	* README: Updated.

	* TODO: Added a list of tasks that need to be done eventually.

	* gmime-parser.c (get_mime_part): rfc2047 decode the