@@ -44,17 +44,17 @@ gchar *g_mime_utils_8bit_header_decode (const guchar *in);
 gchar *g_mime_utils_8bit_header_encode (const guchar *in);
 
 /* do incremental base64 (de/en)coding */
-gint g_mime_utils_base64_decode_step (guchar *in, gint len, guchar *out, gint *state, guint *save);
-gint g_mime_utils_base64_encode_step (guchar *in, gint len, guchar *out, gint *state, gint *save);
-gint g_mime_utils_base64_encode_close (guchar *in, gint inlen, guchar *out, gint *state, gint *save);
+gint g_mime_utils_base64_decode_step (const guchar *in, gint len, guchar *out, gint *state, guint *save);
+gint g_mime_utils_base64_encode_step (const guchar *in, gint len, guchar *out, gint *state, gint *save);
+gint g_mime_utils_base64_encode_close (const guchar *in, gint inlen, guchar *out, gint *state, gint *save);
 
 /* do incremental uudecoding */
-gint g_mime_utils_uudecode_step (guchar *in, gint len, guchar *out, gint *state, guint32 *save, gchar *uulen);
+gint g_mime_utils_uudecode_step (const guchar *in, gint len, guchar *out, gint *state, guint32 *save, gchar *uulen);
 
 /* do incremental quoted-prgintable (de/en)coding */
-gint g_mime_utils_quoted_decode_step (guchar *in, gint len, guchar *out, gint *savestate, gint *saveme);
-gint g_mime_utils_quoted_encode_step (guchar *in, gint len, guchar *out, gint *state, gint *save);
-gint g_mime_utils_quoted_encode_close (guchar *in, gint len, guchar *out, gint *state, gint *save);
+gint g_mime_utils_quoted_decode_step (const guchar *in, gint len, guchar *out, gint *savestate, gint *saveme);
+gint g_mime_utils_quoted_encode_step (const guchar *in, gint len, guchar *out, gint *state, gint *save);
+gint g_mime_utils_quoted_encode_close (const guchar *in, gint len, guchar *out, gint *state, gint *save);
 
 #ifdef __cplusplus
 }
